fixed whitespace pre for chats to enter a new line

--- a/src/FrontEnd/index.css
+++ b/src/FrontEnd/index.css
@@ -56,11 +56,11 @@ body {
 form {
   width: 950px;
 }
-ul{
+ul {
   width: 100%;
   overflow-y: auto;
 }
-.username{
+.username {
   padding: 3px;
   font-weight: bolder;
   width: auto;
@@ -69,6 +69,7 @@ ul{
   border: 2px solid black;
   border-radius: 5px;
 }
-.diplayMsg{
+.diplayMsg {
   padding: 10px;
+  white-space: pre;
 }
